# stalltagebuch

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Dioxus.toml  LICENSE  PROPOSALS.md  README.md  REFACTORING_SUMMARY.md  REMAINING_WORK.md  SYNC_FORMAT.md  build_android.sh  copy_mainactivity.sh  gradle.properties  prepare_build.sh
.cargo/: config.toml
.github/: copilot-instructions.md
.github/prompts/: makei18n.prompt.md
android/: AndroidManifest.xml  MainActivity.kt  build.gradle.kts
android/res/xml/: file_paths.xml  network_security_config.xml
assets/: main.css
dioxus-gallery/: Cargo.toml  README.md
dioxus-gallery-components/: Cargo.toml  README.md
dioxus-gallery/src/: lib.rs
locales/: de-DE.ftl  en-US.ftl
nextcloud-auth/: Cargo.toml
nextcloud-auth/src/: component.rs  service.rs
photo-gallery/: COMPONENT_API.md  Cargo.toml
photo-gallery/src/: components.rs  lib.rs  models.rs  schema.rs  service.rs  sync.rs  thumbnail.rs
src/: camera.rs  error.rs  filesystem.rs  i18n.rs  image_processing.rs  main.rs
src/components/: egg_history.rs  egg_tracking.rs  event_add.rs  event_edit.rs  home.rs  mod.rs  navigation.rs  profile_add.rs  profile_detail.rs  profile_edit.rs  profile_list.rs  settings.rs  statistics.rs
src/database/: mod.rs  schema.rs
src/models/: egg_record.rs  individual_egg_record.rs  mod.rs  photo.rs  photo_metadata.rs  quail.rs  quail_event.rs  sync_settings.rs  wachtel.rs  wachtel_event.rs
src/services/: analytics_service.rs  background_sync.rs  crdt_service.rs  download_service.rs  egg_service.rs  event_service.rs  export_import_service.rs  mod.rs  operation_capture.rs  photo_service.rs  profile_service.rs  sync_paths.rs  sync_service.rs  upload_service.rs
