[package]
name = "stalltagebuch"
version = "0.1.0"
authors = ["Franz Dietrich <dietrich@teilgedanken.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest_dav = "0.2"
base64 = "0.22"
toml = "0.8"
sha2 = "0.10"
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

# Android build targets
[target.aarch64-linux-android.dev-dependencies]
[target.armv7-linux-androideabi.dev-dependencies]
[target.i686-linux-android.dev-dependencies]
[target.x86_64-linux-android.dev-dependencies]
