[package]
name = "photo-gallery"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A reusable photo gallery management library with thumbnail generation and storage"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "webp"] }
tokio = { version = "1.0", features = ["rt", "time"] }
log = "0.4.28"
reqwest = { version = "0.12", features = ["json"], optional = true }
reqwest_dav = { version = "0.2", optional = true }
rand = { version = "0.9", optional = true }

[features]
default = []
sync = ["reqwest", "reqwest_dav", "rand"]
